avoid logo to collapse if not enough space is available

--- a/packages/components/app/styles/components/side-nav.scss
+++ b/packages/components/app/styles/components/side-nav.scss
@@ -117,6 +117,7 @@
 
 .hds-side-nav-header__logo {
   display: block;
+  flex: none;
   align-items: center;
   justify-content: center;
   width: var(--token-side-nav-header-home-link-logo-size);
